--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -2,6 +2,7 @@ $orange : #f26c4f;
 $grey : #4f4f4f;
 $background-grey-dark : #373737;
 $background-grey-light : #474747;
+$background-grey-ultraLight: #ebebeb;
 $white:#FFFFFF;
 
 @font-face {
