--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@ body {
   display: inline-block;
   margin: 0;
   vertical-align: top;
+  font-size: normal;
 }
 
 /*# sourceMappingURL=style.css.map */
