--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,6 +5,9 @@ $background-grey-light : #474747;
 $background-grey-ultraLight: #ebebeb;
 $white:#FFFFFF;
 
+$stepSize1:640px;
+$stepSize2:940px;
+
 @font-face {
   font-family:"nexa";
   src:url("../fonts/nexa-light.otf") format("otf"),
