--- a/src/scss/header/_headerNav.scss
+++ b/src/scss/header/_headerNav.scss
@@ -3,13 +3,29 @@
 
   @media screen and (max-width:$stepSize1)
   {
-    display:none;
+    position:fixed;
+    left:0;
+    top:0;
+    transform: translateX(-100%);
+    transition: all 0.250s ease-in; 
+
+    &.is-active{
+        transform: translateX(0);
+    }
+
   }
 
   &__menu{
     display:flex;
     flex-direction: row;
     padding-left:0;
+
+
+    @media screen and (max-width:$stepSize1)
+    {
+      flex-direction:column;
+      width:200px;
+    }
 
     li{
       list-style:none;
@@ -27,6 +43,7 @@
         text-decoration:none;
         font-size:1.2rem;
         font-weight: bold;
+        text-align: center;
       }
     }
   }
